Fixing scaling on mobile.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
 }
 
 #cat img {
+    max-width: 90%;
+    max-height: 90%;
     display: inherit;
     -webkit-filter: drop-shadow(0px 0px 8px rgba(0,0,0,0.5));
     -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
